--- a/src/style/Global.css
+++ b/src/style/Global.css
@@ -1,22 +1,26 @@
-:global *,
-:global *:before,
-:global *:after {
+*,
+*:before,
+*:after {
   text-rendering: optimizeLegibility;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
-:global *:focus {
+
+*:focus {
   outline: none;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
-:global body, :global html, :global #root {
+
+body, html, #root {
   height: 100%; }
-:global body {
+
+body {
   background: #f6f6f6;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
   color: #333; }
+
 :global .page-wrapper {
   max-width: 1200px;
   padding: 0 20px;
